# budgie-desktop

./: meson.build  rules
debian/: budgie-core-dev.install  budgie-core-dev.lintian-overrides  budgie-core.install  budgie-core.lintian-override  budgie-core.lintian-overrides  budgie-core.manpages  budgie-daemon.1  budgie-desktop-doc.install  budgie-desktop-settings.1  budgie-desktop.1  budgie-desktop.gsettings-override  budgie-desktop.gsettings-override.debian  budgie-desktop.install  budgie-panel.1  budgie-polkit-dialog.1  budgie-run-dialog.1  budgie-wm.1  changelog  changelog-announcement.txt  control  copyright  files  gir1.2-budgie-1.0.install  gir1.2-budgie-desktop-1.0.install  gsettings-override  libbudgie-plugin0.install  libbudgie-plugin0.symbols  libbudgie-private0.install  libbudgie-private0.symbols  libbudgiegvc.install  libbudgietheme0.install  libbudgietheme0.symbols  libraven0.install  libraven0.lintian-overrides  libraven0.symbols  rules  source.lintian-overrides  watch
debian/patches/: 0001-Fix-compilation-for-out-of-tree-builds.patch  0001-Lower-the-ibus-requirement-to-1.5.11-for-our-Debuntu.patch  0001-Obtain-gsettings-transparency-key-value-before-showi.patch  0001-applets-icon-tasklist-Fix-pinned-icon-squishing-on-l.patch  0001-imports-natray-Enforce-minimum-size-of-22px.patch  0001-panel-Restore-missing-animations-GTK-3.22.patch  0001-raven-Kill-the-opacity-change-on-slide-in-looks-naff.patch  0001-set-settings-window-title-to-match-the-.desktop-name.patch  0001-wm-Forcibly-set-the-rpath-for-the-private-Mutter-API.patch  0002-Fix-typo-in-meson.build.patch  0002-Switch-to-checking-GSD-version-for-the-build-1319.patch  0002-applets-status-Implement-a-volume-popover-on-the-vol.patch  0002-check-that-schema-and-prefix-have-been-previously-cr.patch  0002-wm-ibus-Always-try-to-use-an-existing-ibus-daemon-if.patch  0003-Correctly-port-to-upower-0.99API.patch  0003-Fix-show-desktop-applet-1609.patch  0003-Port-to-mutter-3-from-GNOME-3.30.patch  0003-Work-around-serious-regressions-in-GTK3.22.13.patch  0003-fix-crash-of-the-window-manager-when-the-current-loc.patch  0004-Add-network-manager-to-the-spamlist-for-notification.patch  0004-panel-Chain-methods-to-fix-GtkBox-allocation-spam-ev.patch  0004-polkit-Ensure-the-cancellable-is-truly-unowned.patch  0004-wm-Purge-old-backgrounds-from-the-cache.patch  0005-Fix-theme-for-GTK-3.22.patch  0005-Set-ellipsize-property-on-notifications.patch  0005-panel-Fix-troublesome-popovers-once-and-for-all.patch  0005-raven-Only-deal-with-a-device-card-when-it-actually-.patch  0006-Ensure-notification-title-is-properly-ellipsized.-Re.patch  0006-applets-budgie-menu-Stop-using-weak-references-leadi.patch  0006-raven-Mirror-the-last-fix-and-ensure-removed-Things-.patch  0006-rundialog-Fix-stumpy-rundialog-syndrome-issue-800.patch  0007-Disable-notification-timeout-when-mouse-hovering.-Re.patch  0008-Add-copyright-for-notification-disabled-symbolic.svg.patch  0008-Fix-reading-themes-from-users-.themes-folder.patch  0009-Polkit-Correctly-handle-the-user-dismissing-the-auth.patch  0011-Override-new-mutter-vertical-workspace-layout.patch  Mutter-3.35.91-1939.patch  Use-panel-orientation-for-spacer-sizing.patch  adapt-to-gsd-324.patch  adapt-to-mutter-324.patch  (+44 more)
debian/tests/: check_import.py  control  desktopname
debian/upstream/: metadata  signing-key.asc
src/lib/: manager.vala  toplevel.vala
src/panel/: com.solus-project.budgie-panel.gschema.xml  manager.vala  panel.vala
src/panel/settings/: settings_panel.vala
src/polkit/: meson.build
src/wm/: background.vala  meson.build  wm.vala
vapi/: Meta-7.metadata  README.md  libmutter-7.vapi  meson.build  mutter-clutter-7.vapi  mutter-cogl-7.vapi  polkit-agent-1-custom.vala  polkit-gobject-1-custom.vala
